# Lab-Project

./: .gitignore  Averages.m  BaudSymbols.txt  FECReceiver.grc  FECSender.grc  FirstBlock.cpp  StripGarbage.m  TempCode.cpp  TempCode_0.cpp  TestFloat.txt  TestI.txt  TestInputTX.txt  TestInputTXPacked.txt  TestInputUnpack.txt  TestMap.txt  TestOutput.txt  TestOutputFEC.txt  TestOutputFECPDU.txt  TestingEncoder.pothos  TestingFEC.grc  TestingPDUS.grc  TestingSDRs.pothos  TestingSDRsData.pothos  TestingUSRPRX.pothos  TestingUSRPTX.pothos  modem0_DiffTry.pothos  modem0_Modi.pothos  modem0_exampleCheck.pothos  modem0_omodified.pothos  monFiltering10kRPTest2WORKING.pothos  santizationSelect.m  top_block.py
Baseline/: StripGarbage.m  santizationSelect.m
CustomBlocks/BaudRateLimiter/: CMakeCache.txt  CMakeLists.txt  Makefile  PothosUtil.sh  SymbolsToSamples.cpp  SymbolsToSamplesDocs.cpp  install_manifest.txt
CustomBlocks/CCDecoder/: CCDecoder.cpp  CCDecoderDocs.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
CustomBlocks/CCEncoder/: CCEncoder.cpp  CCEncoderDocs.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
CustomBlocks/SamplesToSymbols/: CMakeCache.txt  CMakeLists.txt  Makefile  SamplesToSymbols.cpp  SamplesToSymbolsDocs.cpp  cmake_install.cmake  install_manifest.txt
CustomBlocks/SquareFloat/: CMakeCache.txt  CMakeLists.txt  FirstBlock.cpp  Makefile  SquareFloatDocs.cpp  cmake_install.cmake  install_manifest.txt
CustomBlocks/SymbolsToSamples/: CMakeCache.txt  Makefile  SymbolsToSamples.cpp  cmake_install.cmake
CustomBlocks/TestingBuffers/: CMakeLists.txt
CustomBlocks/gr-Custom/: CMakeLists.txt  (+1 more)
PothosFiles/: ASimpleAP.grc  C:\Users\XongileN\Google Drive\PothosFiles\out.txt  CheckingOOK.grc  DataNoPackets.grc  FindingSNR.grc  GenTestDatagrc.grc  ModemVersion.pothos  OpenDayFlow.grc  OpenDayFlow8PSK.grc  OpenDayFlowQPSK.grc  Remaking.grc  RemakingRX.grc  RemakingTX.grc  RemakingTXOnlyTX.grc  RemakingTXOnlyTXDiffCoding.grc  RemakingTXOnlyTXTweak.grc  RemakingTXOnlyTXTweak2.grc  Simple.grc  TXDiffEncoding.grc  TXDiffEncodingBarkerCode.grc  TXDiffEncodingQPSK.grc  TXDiffEncodingSmallFiles.grc  TXDiffEncodingSmallFilesTestingCRC.grc  TXOnlyFixingDiffEncoding.grc  Taps.grc  Taps.txt  TesingOnline.grc  TesingOnlineWithPackets.grc  TesingOnlineWithPacketsNORP.grc  Test.pothos  TestingBaudRateBlock.pothos  TestingBaudRateBlocks.pothos  TestingDecoder.pothos  TestingEncoder&Decoder.pothos  TestingOnlineShit.pothos  TestingPacerasBaudRate.pothos  TestingQPSK.pothos  TestingR.m  TestingSDR.grc  TestingSDRs.pothos  (+30 more)
ReceivedData200_10DB/: Correlation.m  Correlation.m~  StripGarbage.m  santizationSelect.asv  santizationSelect.m
ReceivedData200_10DB_No_Barker/: StripGarbage.m  santizationSelect.m
ReceivedData200_15DB/: StripGarbage.m  santizationSelect.m
ReceivedData200_25DB/: StripGarbage.m
ReceivedData200_25DB _No_Barker/: StripGarbage.m
ReceivedData200_40DB_No_Barker/: StripGarbage.m
ReceivedData200_5DB/: StripGarbage.asv  StripGarbage.m
ReceivedData200_60DB/: StripGarbage.m  santizationSelect.m
ReceivedData200_60DB _No_Barker/: StripGarbage.asv  StripGarbage.m  santizationSelect.m
html/: Averages.html
(+39 files in other folders)
